Name:           autotool-server-interface
Version:        0.4.0
Author:         Bertram Felgenhauer
Maintainer:     Bertram Felgenhauer
Stability:      Experimental
Synopsis:       autotool Xml-RPC server
Description:
  This package provides a common interface
  for autotool-service-implementation (providing autotool.cgi)
  and clients (e.g., autotool-db)
Cabal-Version:  >= 1.2
Build-Type:     Simple

Library 
    Hs-Source-Dirs: src 
    GHC-Options:    -Wall -fglasgow-exts
    Build-Depends:
        autotool-interface,
        autolib-transport,
        autolib-todoc,
        autolib-output,
        autolib-reader,
        autolib-reporter,
        autolib-util,
        SHA,   base, random, bytestring, base64-bytestring, containers,
        haxr, mtl, parsec,  dataenc, directory, unix,
        process, old-time, utf8-string,
        HaXml, pretty,
        text, filepath,  binary,  digest
    Exposed-Modules:
        Util.Hash, Util.Png
        Util.Xml.OutputDTD, Util.Xml.Output, Util.Xml.Representation,
        Types.TaskTree
        Types.Instance
        Types.TaskDescription
        Types.Signed
        Types.Documented
        Types.TT
        Types.Solution
        Types.ServerInfo
        Types.Basic
        Types.Config
        Types.Version
        Types.ScoringOrder
        Types.Description
        Service.Interface

