Name:           autotool-trial
Version:        0.0.0
License:        GPL
License-File:   LICENSE
Author:         Johannes Waldmann, Mirko Rahn, Alf Richter, Betram Felgenhauer 
                and others
Homepage:       http://www.imn.htwk-leipzig.de/~waldmann/autotool/
Category:       Education
Synopsis:       Online Grading of Exercises in Discrete Mathematics 
                and Computer Science
Cabal-Version:  >= 1.2
Build-type:	Simple

executable Trial.cgi
        main-is: Inter/Trial.hs
        hs-source-dirs: . control ../../common
        build-depends: base==4.*, containers, mtl, directory, random,
            old-locale, old-time, xhtml, process, utf8-string, unix,
            hsql, hsql-mysql, parsec, cgi, array, pretty, 
            autotool-collection, 
            autolib-todoc, autolib-reader, autolib-output, autolib-reporter,
            autolib-data, autolib-util
        ghc-options: -fglasgow-exts -fallow-undecidable-instances

