Name:           autotool-test
Version:        1.0
-- License:        GPL
-- License-File:   LICENSE
Author:         Bertram Felgenhauer
Maintainer:     Bertram Felgenhauer
Homepage:       http://dfa.imn.htwk-leipzig.de/auto/
Category:       E-Testing
Synopsis:       autotool testsuite
Description:
  Testsuite and related utilities for autotool.
  .
  There are three executables, one for extracting test cases from an
  autotool database (autotool-test-extract), one for running a test
  suite (autotool-test-run), and one for rendering test results in a
  pretty HTML summary (autotool-test-report).
Stability:      Experimental
Cabal-Version:  >=1.2
Build-Type:     Simple
Data-Dir:       data
Data-Files:     test.css

Flag extract
    Description: Build test extractor
    Default: False

Flag run
    Description: Build test runner
    Default: False

Flag report
    Description: Build test reporter
    Default: False

Flag all
    Description: Build everything
    Default: True

Executable autotool-test-extract
    If !flag(extract) && !flag(all)
        Buildable: False
    GHC-Options: -Wall
    Hs-source-dirs: src
    Main-Is: Extract.hs
    Extensions:
        DeriveDataTypeable,
        ScopedTypeVariables
    Build-Depends:
        base,
        directory,
        xhtml,
        containers,
        random,
        hsql-mysql,
        cgi,
        mtl,
        parsec,
        unix,
        old-time,
        autotool-interface,
        autotool-collection,
        autotool-db,
        autolib-util,
        autolib-data,
        autolib-output,
        autolib-reader,
        autolib-reporter,
        autolib-todoc

Executable autotool-test-run
    If !flag(run) && !flag(all)
        Buildable: False
    GHC-Options: -Wall -threaded
    Hs-source-dirs: src
    Main-Is: Run.hs
    Extensions:
        DeriveDataTypeable
    Build-Depends:
        base,
        filepath,
        autotool-interface,
        autotool-db,
        autotool-collection

Executable autotool-test-report
    If !flag(report) && !flag(all)
        Buildable: False
    GHC-Options: -Wall
    Hs-source-dirs: src
    Main-Is: Report.hs
    Build-Depends:
        base,
        filepath,
        xhtml,
        autotool-interface,
        autotool-db,
        autotool-collection
