Name:           autotool-trial
Version:        1.0
-- License:        GPL
-- License-File:   LICENSE
Author:         Johannes Waldmann
Maintainer:     Johannes Waldmann
Homepage:       http://dfa.imn.htwk-leipzig.de/auto/
Category:       E-Testing
Synopsis:       autotool trial CGI
Description:
  This package provides Trial.cgi, a frontend to the autotool problem
  collection. Users can choose and configure available problems, and
  submit solutions.
Stability:      Experimental
Cabal-Version:  >=1.2
Build-Type:     Simple

Executable Trial.cgi
  Build-Depends:
    autolib-todoc,autolib-data,autolib-reader,
    autolib-output,autolib-reporter, autolib-util,
    autotool-interface, autotool-collection,
    base == 4.*,parsec, old-locale,old-time,
    xhtml,cgi,
    hsql,hsql-mysql,
    containers,directory,random,mtl,
    process,unix,digest,bytestring,
    autolib-transport,
    obdd,array,pretty
  GHC-Options:    -Wall -fglasgow-exts
  Extensions:
--     DeriveDataTypeable
--     MultiParamTypeClasses
--     TypeSynonymInstances
--     FlexibleInstances
--     FlexibleContexts
--     UndecidableInstances
--     ScopedTypeVariables
--     FunctionalDependencies
--     TemplateHaskell
  Hs-source-dirs: src, src/control
  Main-Is: Operate/Trial.hs
