name:              autotool-yesod
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Model
                     Derived
                     Handler.Home
                     Handler.Aufgabe
                     Handler.Aufgabe.Forms
                     Handler.AufgabeAnlegen
                     Handler.AufgabeBearbeiten
                     Handler.AufgabeBenutzerId
                     Handler.AufgabeBenutzerIdZufall
                     Handler.AufgabeEinstellungen
                     Handler.AufgabeKonfiguration
                     Handler.Aufgaben
                     Handler.AufgabenAktuell
                     Handler.AufgabeTesten
                     Handler.AufgabeVorlage
                     Handler.AufgabeVorlagen
                     Handler.Direktoren
                     Handler.DirektorErnennen
                     Handler.Einsendung
                     Handler.Gruppe
                     Handler.GruppeAnlegen
                     Handler.Gruppen
                     Handler.Resultate
                     Handler.ResultatePflicht
                     Handler.Schule
                     Handler.SchuleAnlegen
                     Handler.Schulen
                     Handler.Semester
                     Handler.SemesterAnlegen
                     Handler.Semesters
                     Handler.Server
                     Handler.Servers
                     Handler.Statistik
                     Handler.Studenten
                     Handler.Tutoren
                     Handler.TutorErnennen
                     Handler.Vorlesung
                     Handler.VorlesungAnlegen
                     Handler.Vorlesungen
                     Handler.Waisenkinder
                     Data.Tuple6
                     Yesod.Auth.Autotool
                     Yesod.Auth.Autotool.Message
                     Yesod.Auth.Autotool.Type
                     Yesod.Auth.Autotool.Widget
                     Yesod.Form.Fields.PreField
                     Yesod.Form.Fields.TreeValueField

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.4.0      && < 1.5
                 , yesod-core                    >= 1.4.0      && < 1.5
                 , yesod-auth                    >= 1.4.0      && < 1.5
                 , yesod-static                  >= 1.4.0      && < 1.5
                 , yesod-form                    >= 1.4.0      && < 1.5
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 2.0
                 , template-haskell
                 , shakespeare                   >= 2.0        && < 2.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 3.0        && < 3.1
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 2.1        && < 2.2
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 3.0        && < 3.1
                 , data-default
                 , aeson                         >= 0.6        && < 0.9
                 , conduit                       >= 1.0        && < 2.0
                 , monad-logger                  >= 0.3        && < 0.4
                 , fast-logger                   >= 2.2        && < 2.3
                 , wai-logger                    >= 2.2        && < 2.3
                 , persistent                    >= 2.0        && < 2.2
                 , persistent-mysql              >= 2.0        && < 2.2
                 , persistent-template           >= 2.0        && < 2.2
                 , containers
                 , time
                 , old-locale
                 , blaze-html
                 , mime-mail
                 , email-validate
                 , exceptions
                 , transformers
                 , either
                 , conduit-extra
                 , random
                 , http-types
                 , digest
                 , autotool-db
                 , autotool-interface
                 , autotool-server-interface
                 , autolib-output
                 , autolib-todoc
                 , autolib-util

    -- see https://github.com/yesodweb/yesod/issues/814
    if !os(windows)
        build-depends: unix

executable         autotool-yesod
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , autotool-yesod
                     , yesod

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    hs-source-dirs:    test
    ghc-options:       -Wall

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections

    build-depends: base
                 , autotool-yesod
                 , yesod-test >= 1.4 && < 1.5
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-mysql
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
